--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,11 +1,11 @@
+/*entire html*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-
-/*Nav*/
+/*Navigation*/
 nav {
   display: flex;
   flex-direction: column;
@@ -15,30 +15,44 @@ nav {
   height: 100vw;
   width: 18vw;
   padding: 10px 25px;
-  border-right: 1px solid #000000;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  background: rgba(204, 0 , 0, 1);
 }
 
 nav img {
-    width: 75%;
-    margin: 20px auto 50px auto;
+    width: 100%;
+    margin: 1vw auto 5vw 0;
 }
 
 nav ul {
     list-style: none;
-    font-size: 1.75vw;
-    line-height: 1.75;
+    font-size: 1.25vw;
+    line-height: 2.75;
 }
 
 nav ul li {
-    border-bottom: 2px solid #000000;
+    border-bottom: 2px solid #fff;
 }
 
 nav ul li a {
     font-weight: bold;
     text-decoration: none;
-    color: #000;
+    color: #bec2cb;
+}
+
+/*Main content*/
+main{
+    display:flex;
+    justify-content: flex-start;
+    width: 72vw;
+    margin: 0 0 2vw 20vw;
+}
+
+footer {
+    text-align: center;
+    padding: 1.5vw;
+    background:rgba(204, 0 , 0, 1);
 }
 
 
