--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,36 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/*Navigation*/
+header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1.5vw;
+} 
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li a {
+    padding: 0 1.7vw;
+}
+
+header a {
+    text-decoration: none;
+} 
 
 
 
