--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,7 +12,7 @@ body {
 header {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 1.5vw;
     background-image: url("../images/SLC.jpeg");
     background-size: cover;
@@ -27,6 +27,7 @@ header nav ul {
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    font-size: 22px;
 }
 
 header nav ul li a {
@@ -43,15 +44,19 @@ header a {
     background-size: cover;
     background-position: 80%;
     background-attachment: fixed;
-    height: 33vw;
+    height: 25vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hero img {
-    height:90%;
+    height: 82%;
+    padding-bottom: 1.5vw;
 }
 
-
-
+.hero h1 {
+    font-size: 50px;
+}
