--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,15 +10,15 @@ body {
 
 /*Navigation*/
 header {
+    background: chartreuse;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 1.5vw;
-    background-image: url("../images/SLC.jpeg");
-    background-size: cover;
-    background-position: 80%;
-    background-attachment: fixed;
-    z-index: 99999;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
 } 
 
 header nav ul {
@@ -27,11 +27,12 @@ header nav ul {
     justify-content: space-between;
     align-items: center;
     list-style: none;
-    font-size: 22px;
+
 }
 
 header nav ul li a {
-    padding: 0 1.7vw;
+    font-size: 1.7vw;
+    padding: 1.7vw;
 }
 
 header a {
@@ -40,23 +41,65 @@ header a {
 
 /*Hero*/
 .hero {
-    background-image: url("../images/SLC.jpeg");
+    background-color: #ffffff;
     background-size: cover;
     background-position: 80%;
     background-attachment: fixed;
     height: 25vw;
+    text-align: center;
+}
+
+.me {
+    height: 100%;
+    line-height: .95;
+}
+
+.me h1 {
+    font-size: 2.5vw;
+}
+
+.me p {
+    font-size: .9vw;
+    font-style: italic;
+}
+
+.me img {
+    padding-bottom: 1.1vw;;
+}
+
+/*Layout for main section*/
+.main-layout {
+    padding:  0 2.5vw 3.5vw 2.5vw;
+    line-height: 1.5;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.main-layout h2 {
+    font-size: 2.2vw;
+    padding-bottom: 1.2vw;
+}
+
+.main-layout p {
+    margin-left: 11vw;
+}
+
+/*projects Section*/
+.projects {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
 }
 
-.hero img {
-    height: 82%;
-    padding-bottom: 1.5vw;
+.projects h3 {
+    font-size: 1.75vw;
 }
 
-.hero h1 {
-    font-size: 50px;
+.projects h3:not(:first-child) {
+    margin-top: 5vw;
 }
+
+.projects p {
+   margin-top: .5vw;
+}
+
