--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -107,6 +107,10 @@ header a {
    margin-top: .5vw;
 }
 
+.projects img {
+    width: 30%;
+}
+
 /*Contact Me*/
 .contact {
     width: 50%;
@@ -121,7 +125,7 @@ header a {
 }
 
 .contact input, textarea {
-    border-radius: .5vw;
+    border-radius: .33vw;
 }
 
 .contact input:not(:nth-child(6)){
@@ -131,7 +135,9 @@ header a {
 .contact button {
     width: 30%;
     margin: 0 auto;
-    padding: 1vw;
+    padding: .75vw;
+    font-weight: bold;
+    font-size: 1vw;
 }
 
 
@@ -144,11 +150,17 @@ header a {
     align-items: center;
 }
 
+.footer h2 {
+    font-size: 1.5vw;
+    font-weight: lighter;
+}
+
 .footer ul {
     list-style: none;
 }
 
 .footer a {
-    font-size: 2vw;
+
+    font-size: 1.5vw;
     text-decoration: none;
 }
